# django-base

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_created_at_and_more.py
apps/accounts/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
apps/core/: exceptions.py  middleware.py  mixins.py  pagination.py  permissions.py  response.py  throttles.py  utils.py
apps/products/: __init__.py  admin.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
apps/products/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
tests/: test_auth.py  test_e2e.py  test_permissions.py
