[project]
name = "django-base"
version = "1.0.0"
description = "Reusable Django API-first starter template"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "drf-spectacular",
    "django-cors-headers",
    "django-filter",
    "whitenoise",
    "django-environ",
    "psycopg2",
    "gunicorn",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
    "ruff",
    "black",
    "isort",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.isort]
profile = "black"
force_single_line = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
addopts = "-p no:cacheprovider --cov=. --cov-report=term-missing --cov-fail-under=80"
